--- a/appspec.yml
+++ b/appspec.yml
@@ -9,11 +9,7 @@ files:
   - source: /
     destination: /var/www/html/WordPress
 hooks:
-  Install:
-    - location: scripts/install.sh
-      timeout: 300
-      runas: root
   ApplicationStart:
-    - location: scripts/run.sh
+    - location: run.sh
       timeout: 300
       runas: root
