--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,12 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/WordPress
+    destination: /usr/share/nginx/html
+    overwrite: true
 hooks:
-  ApplicationStart:
-    - location: run.sh
+  BeforeInstall:
+    - location: scripts/BeforeInstallHook.sh
       timeout: 300
-      runas: root
+  AfterInstall:
+    - location: scripts/AfterInstallHook.sh
+      timeout: 300
