--- a/package.json
+++ b/package.json
@@ -2,25 +2,23 @@
   "name": "cloud-sas",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/startService.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/startService.js",
     "test": "jest",
     "coverage": "jest --coverage",
     "static:code:analysis": "eslint src/**/*.js",
-    "dev": "nodemon index.js",
-    "start:bot": "node index.js",
-    "start:serivces": "concurrently \"npm run start:bot\" \"npm run start\"",
-    "docker:build": "docker build -t bot_debug -f ./Dockerfile .",
-    "start:docker": "npm run docker:build && docker run --rm -it -p 9999:8080 bot_debug"
+    "dev": "nodemon startBot.js",
+    "start:bot": "node startBot.js",
+    "start:serivces": "concurrently \"npm run start:bot\" \"npm run start\""
   },
   "jest": {
     "coverageThreshold": {
       "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
+        "functions": 40,
+        "lines": 40,
+        "branches": 0,
+        "statements": 40
       }
     },
     "reporters": [
